--- a/mentors_dashboard.html
+++ b/mentors_dashboard.html
@@ -4,107 +4,125 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mentor Dashboard</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.1/dist/tailwind.min.css" />
   <style>
-    /* Custom styles */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f4f8;
+      margin: 0;
+      padding: 0;
+    }
     .dashboard-header {
       background-color: #1d8cd7;
       color: white;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
-
+    .sidebar {
+      background-color: #2c3e50;
+      color: white;
+      width: 220px;
+      height: 100vh;
+      padding: 20px;
+      float: left;
+    }
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      margin: 10px 0;
+      padding: 10px;
+      transition: background 0.3s;
+      border-radius: 5px;
+    }
+    .sidebar a:hover {
+      background-color: #34495e;
+    }
+    .main-content {
+      margin-left: 240px;
+      padding: 20px;
+    }
+    h2 {
+      color: #2c3e50;
+    }
     .task-card {
-      background-color: #f0f3f4;
+      background-color: white;
+      border-radius: 8px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
     }
-
     .task-card:hover {
-      background-color: #e2e8f0;
+      transform: translateY(-5px);
     }
-
-    .progress-bar {
-      width: 70%;
+    button {
+      background-color: #1d8cd7;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background-color: #155a8a;
     }
   </style>
 </head>
-<body class="bg-gray-100 font-sans leading-normal tracking-normal">
-  <!-- Header -->
-  <header class="dashboard-header p-4 flex justify-between items-center">
-    <h1 class="text-xl font-bold">MentorU Dashboard</h1>
-    <div class="flex items-center space-x-4">
-      <div>
-        <input type="text" placeholder="Search..." class="rounded-lg p-2 text-black" />
-      </div>
-      <div class="flex items-center">
-        <img src="https://via.placeholder.com/30" alt="Profile" class="rounded-full" />
-        <span class="ml-2">John Doe</span>
-        <button class="ml-4 bg-white text-black px-4 py-2 rounded-lg">Logout</button>
-      </div>
+<body>
+  <header class="dashboard-header">
+    <h1>MentorU Dashboard</h1>
+    <div>
+      <input type="text" placeholder="Search..." />
+      <button>Logout</button>
     </div>
   </header>
+  <nav class="sidebar">
+    <h2>Menu</h2>
+    <a href="#">Dashboard</a>
+    <a href="#">Schedule</a>
+    <a href="#">Tasks</a>
+    <a href="#">Messages</a>
+    <a href="#">Analytics</a>
+  </nav>
+  <main class="main-content">
+    <h2>Welcome, John!</h2>
+    <div class="task-card">
+      <h3>Upcoming Mentorship Session</h3>
+      <p>Mentorship session with Jane Doe scheduled for Oct 20, 2024.</p>
+      <button onclick="viewDetails('mentorship')">View Details</button>
+    </div>
+    <div class="task-card">
+      <h3>Recent Messages</h3>
+      <p>Jane Doe: Can we reschedule our session?</p>
+      <p>Mike Smith: Thank you for the feedback!</p>
+      <p>Anna Johnson: I’m struggling with the assignment...</p>
+      <button onclick="viewMessages()">View All Messages</button>
+    </div>
+    <div class="task-card">
+      <h3>Pending Tasks</h3>
+      <p>Review assignment from Sarah</p>
+      <p>Prepare feedback for Anna</p>
+      <p>Grade project for Mike</p>
+      <button onclick="viewTasks()">View All Tasks</button>
+    </div>
+  </main>
 
-  <!-- Sidebar -->
-  <div class="flex">
-    <nav class="bg-blue-700 w-64 min-h-screen p-6 space-y-6 text-white">
-      <ul class="space-y-2">
-        <li class="hover:bg-blue-600 p-2 rounded-lg"><a href="#" class="flex items-center"><span>🏠</span> <span class="ml-4">Dashboard</span></a></li>
-        <li class="hover:bg-blue-600 p-2 rounded-lg"><a href="#" class="flex items-center"><span>🗓</span> <span class="ml-4">Schedule</span></a></li>
-        <li class="hover:bg-blue-600 p-2 rounded-lg"><a href="#" class="flex items-center"><span>✅</span> <span class="ml-4">Tasks</span></a></li>
-        <li class="hover:bg-blue-600 p-2 rounded-lg"><a href="#" class="flex items-center"><span>💬</span> <span class="ml-4">Messages</span></a></li>
-        <li class="hover:bg-blue-600 p-2 rounded-lg"><a href="#" class="flex items-center"><span>📊</span> <span class="ml-4">Analytics</span></a></li>
-      </ul>
-    </nav>
+  <script>
+    function viewDetails(type) {
+      window.location.href = type + '_details.html';
+    }
 
-    <!-- Main Content -->
-    <main class="p-6 flex-1">
-      <!-- Welcome Message -->
-      <div class="bg-white p-6 rounded-lg shadow-lg mb-6">
-        <h2 class="text-2xl font-bold mb-2">Welcome, John!</h2>
-        <p class="text-gray-600">Here’s an overview of your activities and student progress.</p>
-      </div>
+    function viewMessages() {
+      window.location.href = 'all_messages.html';
+    }
 
-      <!-- Task Overview Section -->
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <!-- Task Card -->
-        <div class="task-card p-6 rounded-lg shadow-lg">
-          <h3 class="text-lg font-semibold mb-2">Upcoming Mentorship Session</h3>
-          <p class="text-gray-600">Mentorship session with Jane Doe scheduled for Oct 20, 2024.</p>
-          <button class="mt-4 bg-blue-600 text-white px-4 py-2 rounded-lg">View Details</button>
-        </div>
-
-        <!-- Progress Card -->
-        <div class="task-card p-6 rounded-lg shadow-lg">
-          <h3 class="text-lg font-semibold mb-2">Student Progress</h3>
-          <div class="flex items-center justify-between">
-            <p class="text-gray-600">Overall progress:</p>
-            <span>70%</span>
-          </div>
-          <div class="w-full bg-gray-300 rounded-full h-2 mt-2">
-            <div class="bg-blue-600 h-2 rounded-full progress-bar"></div>
-          </div>
-        </div>
-
-        <!-- Messages -->
-        <div class="task-card p-6 rounded-lg shadow-lg">
-          <h3 class="text-lg font-semibold mb-2">Recent Messages</h3>
-          <ul class="text-gray-600">
-            <li class="py-2 border-b">Jane Doe: Can we reschedule our session?</li>
-            <li class="py-2 border-b">Mike Smith: Thank you for the feedback!</li>
-            <li class="py-2">Anna Johnson: I’m struggling with the assignment...</li>
-          </ul>
-          <button class="mt-4 bg-blue-600 text-white px-4 py-2 rounded-lg">View All Messages</button>
-        </div>
-
-        <!-- Tasks -->
-        <div class="task-card p-6 rounded-lg shadow-lg">
-          <h3 class="text-lg font-semibold mb-2">Pending Tasks</h3>
-          <ul class="text-gray-600">
-            <li class="py-2 border-b">Review assignment from Sarah</li>
-            <li class="py-2 border-b">Prepare feedback for Anna</li>
-            <li class="py-2">Grade project for Mike</li>
-          </ul>
-          <button class="mt-4 bg-blue-600 text-white px-4 py-2 rounded-lg">View All Tasks</button>
-        </div>
-      </div>
-    </main>
-  </div>
+    function viewTasks() {
+      window.location.href = 'all_tasks.html';
+    }
+  </script>
 </body>
 </html>
