--- a/prelogin.html
+++ b/prelogin.html
@@ -5,24 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./prelogin.css">
     <title>Student Mentor Application</title>
-    
 </head>
 <body>
 
-
     <header>
-        <div>
-            <h2>Mentorship & Learning</h2>
+        <div class="logo-container">
+            <img src="https://th.bing.com/th/id/R.bc230718566100e68074fc8d27724eed?rik=keRTD29HCJ2Rjg&riu=http%3a%2f%2fadministration.sliet.ac.in%2ffiles%2f2014%2f08%2fBlue.jpg&ehk=R7THNgoYdxrudeET0uZ2I0Y9PJf652jP6j%2b%2bbjeI01c%3d&risl=&pid=ImgRaw&r=0" alt="College Logo" class="logo" /> <!-- Replace with actual logo path -->
+            <h2>Sant Longowal Institute of Engineering and Technology</h2>
         </div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Faculty Profiles</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="http://sliet.ac.in/">Home</a>
+            <a href="http://cs.sliet.ac.in/faculty-staff/">Faculty Profiles</a>
+            <a href="http://sliet.ac.in/about-the-institute/">About</a>
+            <a href="http://sliet.ac.in/contact/">Contact</a>
         </nav>
-        <button>Log in</button>
+        <button onclick="window.location.href='loginpage.html'">Log in</button>
     </header>
-
 
     <div class="main-section">
         <h1>Empowering Students with Expert Guidance</h1>
