--- a/mainpage.html
+++ b/mainpage.html
@@ -12,7 +12,6 @@
             padding: 0;
         }
 
-        /* Navbar */
         .navbar {
             background-color: #2c3e50;
             padding: 15px 20px;
@@ -31,12 +30,10 @@
             color: #18bc9c;
         }
 
-        /* Container */
         .container {
             padding: 40px;
         }
 
-        /* Dashboard header */
         .dashboard-header {
             text-align: center;
             margin-bottom: 40px;
@@ -51,7 +48,6 @@
             color: #7f8c8d;
         }
 
-        /* Dashboard Sections */
         .dashboard-section {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -80,7 +76,6 @@
             color: #7f8c8d;
         }
 
-        /* Profile card styles */
         .profile-card img {
             width: 100px;
             height: 100px;
@@ -88,14 +83,12 @@
             margin-bottom: 15px;
         }
 
-        /* Icon styles */
         .icon {
             font-size: 48px;
             color: #18bc9c;
             margin-bottom: 10px;
         }
 
-        /* Button */
         .button {
             background-color: #18bc9c;
             color: white;
@@ -139,7 +132,7 @@
         <!-- Profile Section -->
         <div class="card profile-card" id="profile">
             <h3>Your Profile</h3>
-            <img src="https://via.placeholder.com/100" alt="Profile Picture" id="profilePic">
+            <img src="https://via.placeholder.com/100" alt="Profile Picture">
             <p><strong>Name:</strong> Dr. Smith</p>
             <p><strong>Experience:</strong> 10+ years</p>
             <p><strong>Expertise:</strong> AI, Data Science</p>
@@ -165,30 +158,24 @@
         <div class="card" id="documents">
             <div class="icon">📁</div>
             <h3>Document Sharing</h3>
-            <input type="file" id="fileInput"/>
+            <input type="file" />
         </div>
     </div>
 </div>
 
 <script>
-// Handle Edit Profile Button Click
+// Redirect to edit profile page on button click
 document.getElementById('editProfileBtn').addEventListener('click', function() {
-    let newName = prompt('Enter new name:');
-    if (newName) {
-        document.querySelector('#profile p').innerHTML = `<strong>Name:</strong> ${newName}`;
-    }
-});
-
-// Handle View Calendar Button Click
-document.getElementById('viewCalendarBtn').addEventListener('click', function() {
-    alert('Calendar will open soon.');
-});
-
-// Handle File Upload
-document.getElementById('fileInput').addEventListener('change', function() {
-    alert('File selected: ' + this.files[0].name);
+    window.location.href = 'edit-profile.html';
 });
 </script>
 
 </body>
 </html>
+<button class="button" id="viewCalendarBtn">View Calendar</button>
+<script>
+    document.getElementById('viewCalendarBtn').addEventListener('click', function() {
+        window.location.href = 'calendar.html'; // Redirect to the new calendar page
+    });
+    </script>
+    
