--- a/loginpage.html
+++ b/loginpage.html
@@ -40,25 +40,26 @@
             <p>Login to access your account</p>
         </div>
     </div>
+<script>
+    function handleLogin() {
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+        const result = validateLogin(username, password);
 
-    <script>
-        function handleLogin() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            const result = validateLogin(username, password);
-
-            if (result) {
-                alert(`Welcome, ${result.user.username}! You are logged in as a ${result.role}.`);
-                // Redirect based on role
-                if (result.role === "student") {
-                    window.location.href = "Student/student-dashboard.html";
-                } else {
-                    window.location.href = "Mentor/mentor-dashboard.html";
-                }
+        if (result) {
+            alert(`Welcome, ${result.user.username}! You are logged in as a ${result.role}.`);
+            
+            // Store the mentor's name in localStorage if they are a mentor
+            if (result.role === "mentor") {
+                localStorage.setItem('mentorName', result.user.username);
+                window.location.href = "mentor/mentor-dashboard.html"; // Redirect to mentor dashboard
             } else {
-                alert("Invalid username or password. Please try again.");
+                window.location.href = "student/student-dashboard.html"; // Redirect to student dashboard
             }
+        } else {
+            alert("Invalid username or password. Please try again.");
         }
-    </script>
+    }
+</script>
 </body>
 </html>
