--- a/Mentor/mentor-dashboard.html
+++ b/Mentor/mentor-dashboard.html
@@ -4,77 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mentor Dashboard</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f4f8;
-      margin: 0;
-      padding: 0;
-    }
-    .dashboard-header {
-      background-color: #1d8cd7;
-      color: white;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
-    .sidebar {
-      background-color: #2c3e50;
-      color: white;
-      width: 220px;
-      height: 100vh;
-      padding: 20px;
-      float: left;
-    }
-    .sidebar a {
-      color: white;
-      text-decoration: none;
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
-      transition: background 0.3s;
-      border-radius: 5px;
-    }
-    .sidebar a:hover {
-      background-color: #34495e;
-    }
-    .main-content {
-      margin-left: 240px;
-      padding: 20px;
-    }
-    h2 {
-      color: #2c3e50;
-    }
-    .task-card {
-      background-color: white;
-      border-radius: 8px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s;
-    }
-    .task-card:hover {
-      transform: translateY(-5px);
-    }
-    button {
-      background-color: #1d8cd7;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background-color: #155a8a;
-    }
-  </style>
+<link rel="stylesheet" href="mentor.css">
 </head>
 <body>
   <header class="dashboard-header">
-    <h1>MentorU Dashboard</h1>
+    <h1>Mentor Dashboard</h1>
     <div>
       <input type="text" placeholder="Search..." />
       <button>Logout</button>
@@ -82,14 +16,15 @@
   </header>
   <nav class="sidebar">
     <h2>Menu</h2>
-    <a href="#">Dashboard</a>
-    <a href="#">Schedule</a>
-    <a href="#">Tasks</a>
-    <a href="#">Messages</a>
-    <a href="#">Analytics</a>
+    <a href="#" class="active"><i class="fas fa-home"></i><span>Dashboard</span></a>
+    <a href="schedule.html"><i class="fas fa-calendar"></i><span>Schedule</span></a>
+    <a href="tasks.html"><i class="fas fa-tasks"></i><span>Tasks</span></a>
+    <a href="messages.html"><i class="fas fa-envelope"></i><span>Messages</span></a>
+    <a href="analytics.html"><i class="fas fa-chart-bar"></i><span>Analytics</span></a>
   </nav>
+
   <main class="main-content">
-    <h2 id="welcome-message">Welcome, Mentor!</h2> <!-- Placeholder for the mentor name -->
+    <h2 id="welcome-message">Welcome, Mentor!</h2>
     <div class="task-card">
       <h3>Upcoming Mentorship Session</h3>
       <p>Mentorship session with Jane Doe scheduled for Oct 20, 2024.</p>
@@ -124,7 +59,6 @@
       window.location.href = 'all_tasks.html';
     }
 
-    // Display mentor's name from localStorage
     document.getElementById("welcome-message").textContent = `Welcome, ${localStorage.getItem('mentorName')}!`;
   </script>
 </body>
