--- a/Mentor/messages.html
+++ b/Mentor/messages.html
@@ -2,172 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="messages.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mentor Messages</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
 
-    .dashboard-header {
-      background-color: #1d8cd7;
-      color: white;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      position: fixed;
-      width: 100%;
-      top: 0;
-      left: 0;
-      z-index: 1000;
-      box-sizing: border-box;
-    }
-
-    .dashboard-header h1 {
-      font-size: 1.8rem;
-      margin: 0;
-    }
-
-    .dashboard-header input {
-      padding: 10px;
-      border-radius: 20px;
-      border: none;
-      outline: none;
-      width: 200px;
-      margin-right: 20px;
-    }
-
-    .dashboard-header button {
-      background-color: #ff4d4d;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .dashboard-header button:hover {
-      background-color: #e60000;
-    }
-
-    .sidebar {
-      background-color: #2c3e50;
-      color: white;
-      width: 65px;
-      height: 100vh;
-      padding: 20px 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-      transition: width 0.3s ease;
-      z-index: 1001;
-    }
-
-    .sidebar:hover {
-      width: 240px;
-    }
-
-    .sidebar h2 {
-      font-size: 1.5rem;
-      margin-bottom: 20px;
-      text-align: center;
-      opacity: 1;
-      transition: opacity 0.3s ease;
-    }
-
-    .sidebar a {
-      display: flex;
-      align-items: center;
-      padding: 12px 20px;
-      color: white;
-      text-decoration: none;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-      opacity: 0;
-      margin-left: -30px;
-      transition: opacity 0.3s ease, margin-left 0.3s ease;
-    }
-
-    .sidebar:hover a {
-      opacity: 1;
-      margin-left: 0;
-    }
-
-    .sidebar a:hover {
-      background-color: #34495e;
-    }
-
-    .sidebar a.active {
-      background-color: #1d8cd7;
-    }
-
-    .sidebar a i {
-      margin-right: 10px;
-    }
-
-    .main-content {
-      margin-left: 80px;
-      padding: 80px 40px;
-      transition: margin-left 0.3s ease;
-    }
-
-    .sidebar:hover + .main-content {
-      margin-left: 260px;
-    }
-
-    .main-content h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      color: #1d8cd7;
-    }
-
-    .message-card {
-      background-color: white;
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.05);
-      transition: box-shadow 0.3s, transform 0.3s;
-    }
-
-    .message-card:hover {
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
-      transform: translateY(-5px);
-    }
-
-    .message-card h3 {
-      font-size: 1.5rem;
-      margin-bottom: 10px;
-      color: #333;
-    }
-
-    .message-card p {
-      color: #555;
-    }
-
-    .message-card button {
-      background-color: #1d8cd7;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .message-card button:hover {
-      background-color: #155a8a;
-    }
-
-  </style>
 </head>
 <body>
   <header class="dashboard-header">
