--- a/Mentor/schedule.html
+++ b/Mentor/schedule.html
@@ -40,7 +40,7 @@
 
   <script>
     function viewDetails(type) {
-      window.location.href = type + '_details.html';
+      window.location.href ='mentorship_details.html';
     }
 
     document.getElementById("welcome-message").textContent = `Welcome, ${localStorage.getItem('mentorName')}!`;
